2016-11-15 Massimo Manghi <mxmanghi@apache.org>
    * rivet/rivet-tcl/catch.tcl|try.tcl: better
    script evaluation is catch/try construct, 
    specified complete ::rivet::abort_page generated 
    error codes
    * rivet/packages/formbroker/formbroker.tcl: add
    package formbroker

2016-11-09 Massimo Manghi <mxmanghi@apache.org>
    * src/mod_rivet/mod_rivet_common.c: the request_rec
    field to be checked in order to determine whether we
    are serving the request is 'header' non 'content_type'.
    This bug didn't surface because their set to the same
    string when a request is handed to the module chain, but
    it's been around ever since.
    * VERSION,configure.ac: version set to 2.3.3

2016-09-21 Massimo Manghi <mxmanghi@apache.org>
    * Changelog: logging release of this artifact as rivet 2.3.2

2016-09-19 Massimo Manghi <mxmanghi@apache.org>
    * rivet/rivet.tcl.in,rivet.tcl: fixed errors in comments

2016-09-13 Massimo Manghi <mxmanghi@apache.org>
    * INSTALL: correct version number
    * doc/commands.xml: Documenting new ::rivet::url_query command

2016-09-09 Massimo Manghi <mxmanghi@apache.org>
    * tests/bailout.test: add tests for ::rivet::catch and ::rivet::try
    * tests/catch.rvt,try.rvt: script testing handling various conditions

2016-09-09 Massimo Manghi <mxmanghi@apache.org>
    * tests/runtests.tcl: support for Apache 1.3 dropped. Add modules needed by
    Apache 2.4
    * tests/apachetests/apachetests.tcl: Dropped support for Apache 1.3
    * tests/shorthand.test: shorthand notation versioning added
    * tests/virtualhost.test: removed NameVirtualHost directive no longer supported

2016-09-08 Massimo Manghi <mxmanghi@apache.org>
    * Changelog: removed spurious duplicated entry 
    * rivet/rivet-tcl/try.tcl: enable Id svn keyword
    * rivet/rivet-tcl/catch.tcl: fixed wrong script invocation, enable Id svn keyword
    * rivet/rivet-tcl/url_query.tcl: add new command ::rivet::url_query
