@@ -1,0 +1,58 @@
+<section id="asciiglyphs">
+    <title>AsciiGlyphs</title>
+    <section>
+        <title>Introduction</title>
+        <para>
+				The <command>AsciiGlyphs</command> package provides a command
+				to print large ASCII glyphs in an HTML fragment based on
+				a &lt;pre&gt;...&lt;/pre:&gt; element. The shape of the glyphs was
+				inspired by the challenge response used by Fossil to let anonymous users
+				to log into a repository. The glyph set was extended to
+				support the whole English alphabet and some punctuation characters.
+				The string to be represented has to be made of pure 7-bit ASCII characters.
+				The package also runs standalone outside of mod_rivet
+        </para>
+     </section>
+    <refentry id="toglyphs">
+	        <refnamediv>
+	            <refname>toGlyphs</refname>
+	            <refpurpose>
+	            	print large ASCII glyphs
+	            </refpurpose>
+	        </refnamediv>
+	        <refsynopsisdiv>
+	            <cmdsynopsis>
+	                <command>::AsciiGlyphs toGlyphs</command>
+	                <arg choice="plain">string</arg>
+	            </cmdsynopsis>
+	        </refsynopsisdiv>
+	        <refsect1>
+            <title>Description</title>
+            <para>
+            	prints the ASCII glyphs corresponding to the characters forming
+    		        	the argument <arg choice="plain">string</arg>
+            </para>
+           </refsect1>
+		  </refentry>
+		  <section>
+		  	<title>Example</title>
+		  		<programlisting>package require AsciiGlyphs
+::AsciiGlyphs toGlyphs "Date: 07-12-2015"
+ _____              _____   ______          ___   ______         __  ___          ___    ___   __  _____ 
+|  __ \     /\     |_   _| |  ____|  _     / _ \ |____  |       /_ ||__ \        |__ \  / _ \ /_ || ____|
+| |  | |   /  \      | |   | |__    |_|   | | | |    / /  ____   | |   ) | ____     ) || | | | | || |__  
+| |  | |  / /\ \     | |   |  __|    _    | | | |   / /  |____|  | |  / / |____|   / / | | | | | ||___ \ 
+| |__| | / ____ \    | |   | |____  |_|   | |_| |  / /           | | / /_         / /_ | |_| | | | ___) |
+|_____/ /_/    \_\   |_|   |______|        \___/  /_/            |_||____|       |____| \___/  |_||____/ 
+
+::AsciiGlyphs toGlyphs "Time: 18:10:19"
+ _____   ___  _    _   ______         __   ___        __   ___        __   ___  
+|_   _| |   || \  / | |  ____|  _    /_ | / _ \   _  /_ | / _ \   _  /_ | / _ \ 
+  | |    | | |  \/  | | |__    |_|    | || (_) | |_|  | || | | | |_|  | || (_) |
+  | |    | | | |  | | |  __|    _     | | &gt; _ &lt;   _   | || | | |  _   | | \__, |
+  | |    | | | |  | | | |____  |_|    | || (_) | |_|  | || |_| | |_|  | |   / / 
+  |_|   |___||_|  |_| |______|        |_| \___/       |_| \___/       |_|  /_/  
+
+</programlisting>
+    </section>
+</section>
