@@ -5,6 +5,8 @@
     error codes
     * rivet/packages/formbroker/formbroker.tcl: add
     package formbroker
+    * doc/xml/formbroker.xml,asciiglyphs.xml: add 
+    documentation for packages formbroker and asciiglyphs
 
 2016-11-09 Massimo Manghi <mxmanghi@apache.org>
     * src/mod_rivet/mod_rivet_common.c: the request_rec
